repaired bug that was causing visible gap in project tiles, image had to be set to block element

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,9 @@ ul {
     display: grid;
     grid-template-columns: auto auto;
     justify-content: center;
+    grid-gap: 40px;
 }
+
 #projects h2 {
     grid-column: 1 / 3;
 }
@@ -63,6 +65,7 @@ ul {
 .project-tile {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: fit-content;
+    text-decoration: none;
 }
 
 .project-tile figcaption {
@@ -71,8 +74,14 @@ ul {
     color: white;
 }
 
-#projects a {
-    text-decoration: none;
+.project-tile figure{
+    margin: 0px;
+    box-sizing: border-box;
+    height: auto;
+}
+
+.project-tile img {
+    display: block;
 }
 
 @media(max-width: 600px) {
